--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,20 +1,19 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "src/app.ts",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": [
-          "src/**/*.ts"
-        ]
+    "version": 2,
+    "builds": [
+      {
+        "src": "src/app.ts",
+        "use": "@vercel/node",
+        "config": {
+          "includeFiles": ["src/**/*.ts"]
+        }
       }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/src/app.ts"
-    }
-  ]
-}
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/src/app.ts"
+      }
+    ]
+  }
+  
