--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,10 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@jamescoyle/vue-icon": "^0.1.2",
+    "@mdi/font": "^7.4.47",
+    "@mdi/js": "^7.4.47",
+    "@mdi/light-js": "^0.2.63",
     "axios": "^1.7.2",
     "crypto-js": "^4.2.0",
     "pinia": "^2.1.7",
@@ -25,6 +29,7 @@
     "@types/node": "^20.12.5",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/tsconfig": "^0.5.1",
+    "less": "^4.2.0",
     "npm-run-all2": "^6.1.2",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
