--- a/api/package.json
+++ b/api/package.json
@@ -12,8 +12,10 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-jwt": "^8.4.1",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "morgan": "~1.9.1"
   }
