--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "jade": "^0.29.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemailer": "^6.9.13"
   }
 }
